Add gbif_downloads.tsv and library(here)
Copied from my local version in trias-project/indicators/data/output. See #3 for possible other location in repo.

--- a/src/belgium/download.Rmd
+++ b/src/belgium/download.Rmd
@@ -26,6 +26,8 @@ Load libraries:
 # Tidyverse packages
 library(tidyverse)
 library(lubridate)
+# to find files
+library(here)
 # GBIF package
 library(rgbif)
 # Project package
@@ -35,7 +37,7 @@ library(trias)
 Define the file where all downloads we've trriggered are added:
 
 ```{r set_file_paths}
-downloads_output_file <- "../data/output/gbif_downloads.tsv"
+downloads_output_file <- here("data", "processed", "gbif_downloads.tsv")
 ```
 
 # Define download query parameters
