--- a/src/belgium/download.Rmd
+++ b/src/belgium/download.Rmd
@@ -84,7 +84,7 @@ hasCoordinate <- TRUE
 
 ## Download GBIF occurrences
 
-**Note**: GBIF credentials are required in the next step.
+**Note**: GBIF credentials are required in the next step, i.e. `gbif_user`, `gbif_pwd`, `gbif_email` should be defined in your `.Renviron` file. 
 
 Trigger download:
 
