--- a/src/belgium/download.Rmd
+++ b/src/belgium/download.Rmd
@@ -97,31 +97,9 @@ gbif_download_key <- occ_download(
   paste0("year <= ", year_end),
   paste0("hasCoordinate = ", hasCoordinate),
   curlopts = list(verbose = TRUE),
-  # user = rstudioapi::askForPassword("GBIF username"),
-  # pwd = rstudioapi::askForPassword("GBIF password"),
-  # email = rstudioapi::askForPassword("Email address for notification")
-  user = Sys.getenv("gbif_user"),
-  pwd = Sys.getenv("gbif_pwd"),
-  email = Sys.getenv("gbif_email")
-)
-```
-
-If you want to run it locally, set GBIF username, password and e-mail in your `.Renviron` file as `gbif_user`, `gbif_pwd`, `gbif_email` respectively and run the following code:
-
-```r
-gbif_download_key <- occ_download(
-  paste0("country = ", paste(countries, collapse = ",")),
-  paste0("basisOfRecord = ", paste(basis_of_record, collapse = ",")),
-  paste0("year >= ", year_begin),
-  paste0("year <= ", year_end),
-  paste0("hasCoordinate = ", hasCoordinate),
-  curlopts = list(verbose = TRUE),
-  # user = rstudioapi::askForPassword("GBIF username"),
-  # pwd = rstudioapi::askForPassword("GBIF password"),
-  # email = rstudioapi::askForPassword("Email address for notification")
-  user = Sys.getenv("gbif_user"),
-  pwd = Sys.getenv("gbif_pwd"),
-  email = Sys.getenv("gbif_email")
+  user = rstudioapi::askForPassword("GBIF username"),
+  pwd = rstudioapi::askForPassword("GBIF password"),
+  email = rstudioapi::askForPassword("Email address for notification")
 )
 ```
 
