--- a/src/belgium/download.Rmd
+++ b/src/belgium/download.Rmd
@@ -36,11 +36,6 @@ library(trias)          # To use functions developed for TrIAS
 
 As the list of alien species from the unified checklist is too long for a query to the GBIF API, we don't define any taxa.
 
-```{r define_taxa}
-taxa_input_file <- ""
-taxon_keys <- c()
-```
-
 ## Define countries
 
 We will limit our occurrences search for specific countries. To allow better tracking, this filter will also be added to `download_output_file`:
@@ -116,6 +111,6 @@ Write download to list of downloads and check pending downloads:
 update_download_list(
   file = here("data", "processed", "gbif_downloads.tsv"), 
   download_to_add = gbif_download_key, 
-  input_checklist = taxa_input_file
+  input_checklist = ""
 )
 ```
