--- a/src/belgium/download.Rmd
+++ b/src/belgium/download.Rmd
@@ -81,7 +81,7 @@ hasCoordinate <- TRUE
 
 ## Trigger download
 
-**Note**: GBIF credentials are required in the next step, i.e. `gbif_user`, `gbif_pwd`, `gbif_email` should be defined in a `.Renviron` file. 
+**Note**: GBIF credentials are required in the next step. 
 
 Trigger download:
 
